added media to container

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,16 +1,18 @@
-@import './utils/variables';
-@import './utils/visually-hidden';
-@import './base/base';
-@import './base/title';
-@import './utils/mixins';
-@import './components/logo';
-@import './components/page-header';
-@import './components/page-footer';
-@import './components/button';
-@import './components/modal';
-@import './components/modal-form';
-@import './components/hero';
-@import './components/advantages';
-@import './components/services';
-@import './components/team';
-@import './components/clients';
+@import "./utils/variables";
+@import "./utils/visually-hidden";
+@import "./base/base";
+@import "./base/container";
+@import "./base/section";
+@import "./base/title";
+@import "./utils/mixins";
+@import "./components/logo";
+@import "./components/page-header";
+@import "./components/page-footer";
+@import "./components/button";
+@import "./components/modal";
+@import "./components/modal-form";
+@import "./components/hero";
+@import "./components/advantages";
+@import "./components/services";
+@import "./components/team";
+@import "./components/clients";
