--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -3,7 +3,18 @@
   padding-bottom: 60px;
   background: #2f303a;
   .container {
-    @include flex(start, baseline);
+    @media screen and (min-width: 768px) {
+      display: flex;
+    }
+
+    // @media screen and (min-width: 768px) and (max-width: 1199px) {
+    //   flex-wrap: wrap;
+    //   justify-content: space-around;
+    // }
+
+    // @media screen and (min-width: 1200px) {
+    //   @include flex(start, baseline);
+    // }
   }
 }
 .footer__wrap {
