--- a/sass/portfolio.scss
+++ b/sass/portfolio.scss
@@ -1,10 +1,12 @@
-@import './utils/variables';
-@import './utils/visually-hidden';
-@import './base/base';
-@import './components/logo';
-@import './utils/mixins';
-@import './components/button';
-@import './components/page-header';
-@import './components/page-footer';
-@import './components/portfolio-filter';
-@import './components/portfolio-projects';
+@import "./utils/variables";
+@import "./utils/visually-hidden";
+@import "./base/base";
+@import "./base/container";
+@import "./base/section";
+@import "./components/logo";
+@import "./utils/mixins";
+@import "./components/button";
+@import "./components/page-header";
+@import "./components/page-footer";
+@import "./components/portfolio-filter";
+@import "./components/portfolio-projects";
