--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -44,8 +44,6 @@
     }
   }
   .textarea {
-      height: 120px;
-      padding: 12px 16px;
     &::placeholder {
       font-size: 12px;
       line-height: 1.16;
@@ -55,10 +53,10 @@
     }
   }
 }
-// .textarea {
-//   height: 120px;
-//   padding: 12px 16px;
-// }
+.textarea {
+  height: 120px;
+  padding: 12px 16px;
+}
 .modal-form__icon {
   position: absolute;
   bottom: 11px;
