--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -3,18 +3,7 @@
   padding-bottom: 60px;
   background: #2f303a;
   .container {
-    @media screen and (min-width: 768px) {
-      display: flex;
-    }
-
-    // @media screen and (min-width: 768px) and (max-width: 1199px) {
-    //   flex-wrap: wrap;
-    //   justify-content: space-around;
-    // }
-
-    // @media screen and (min-width: 1200px) {
-    //   @include flex(start, baseline);
-    // }
+    @include flex(start, baseline);
   }
 }
 .footer__wrap {
