--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -1,16 +1,22 @@
 .container {
   padding: 0 15px;
   margin: 0 auto;
+}
 
-  @media screen and (min-width: 480px) and (max-width: 767px) {
+@media screen and (min-width: 480px) {
+  .container {
     width: 480px;
   }
+}
 
-  //   @media screen and (min-width: 768px) and (max-width: 1199px) {
-  //     width: 768px;
-  //   }
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
 
-  //   @media screen and (min-width: 1200px) {
-  //     width: 1200px;
-  //   }
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
 }
