--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,8 @@
 @import './utils/variables';
 @import './utils/visually-hidden';
 @import './base/base';
+@import './base/container';
+@import './base/section';
 @import './base/title';
 @import './utils/mixins';
 @import './components/logo';
