--- a/css/main.css
+++ b/css/main.css
@@ -743,28 +743,8 @@ textarea {
   }
 }
 
-.advantage .container {
-  padding-top: 94px;
-}
-
-.advantage__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-}
-
-.advantage__item {
-  min-width: 270px;
-}
-
-.advantage__item:not(:last-child) {
-  margin-right: 30px;
+.advantage {
+  padding-top: 60px;
 }
 
 .advantage-item__title {
@@ -775,6 +755,7 @@ textarea {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--primary-text-color);
+  text-align: center;
 }
 
 .advantage-item__description {
@@ -787,15 +768,61 @@ textarea {
 
 .advantage__image {
   margin-bottom: 30px;
-  padding: 25px 100px;
+  padding-top: 25px;
+  padding-bottom: 25px;
   height: 120px;
   background-color: #f5f4fa;
   border-radius: 4px;
+  text-align: center;
 }
 
 .advantage-image__icon {
   width: 70px;
   height: 70px;
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .advantage__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .advantage__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin-top: calc(-1 * var(--card-set-gap));
+    margin-left: calc(-1 * var(--card-set-gap));
+  }
+  .advantage__item {
+    margin-top: var(--card-set-gap);
+    margin-left: var(--card-set-gap);
+    -ms-flex-preferred-size: calc(100% / 2 - var(--card-set-gap));
+        flex-basis: calc(100% / 2 - var(--card-set-gap));
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .advantage__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+  .advantage__item {
+    min-width: 270px;
+  }
+  .advantage__item:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 .services__list {
