--- a/sass/components/_advantages.scss
+++ b/sass/components/_advantages.scss
@@ -1,16 +1,5 @@
 .advantage {
-  .container {
-    padding-top: 94px;
-  }
-}
-.advantage__list {
-  @include flex(space-between, flex-start);
-}
-.advantage__item {
-  min-width: 270px;
-  &:not(:last-child) {
-    margin-right: 30px;
-  }
+  padding-top: 60px;
 }
 .advantage-item__title {
   margin-bottom: 10px;
@@ -20,6 +9,7 @@
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--primary-text-color);
+  text-align: center;
 }
 .advantage-item__description {
   font-weight: 400;
@@ -30,12 +20,45 @@
 }
 .advantage__image {
   margin-bottom: 30px;
-  padding: 25px 100px;
+  padding-top: 25px;
+  padding-bottom: 25px;
   height: 120px;
   background-color: #f5f4fa;
   border-radius: 4px;
+  text-align: center;
 }
 .advantage-image__icon {
   width: 70px;
   height: 70px;
+}
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .advantage__item {
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .advantage__list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: calc(-1 * var(--card-set-gap));
+    margin-left: calc(-1 * var(--card-set-gap));
+  }
+  .advantage__item {
+    margin-top: var(--card-set-gap);
+    margin-left: var(--card-set-gap);
+    flex-basis: calc(100% / 2 - var(--card-set-gap));
+  }
+}
+@media screen and (min-width: 1200px) {
+  .advantage__list {
+    @include flex(space-between, flex-start);
+  }
+  .advantage__item {
+    min-width: 270px;
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
+  }
 }
