--- a/sass/portfolio.scss
+++ b/sass/portfolio.scss
@@ -5,7 +5,7 @@
 @import './base/section';
 @import './components/logo';
 @import './utils/mixins';
-@import './components/button';
+@import './base/button';
 @import './components/page-header';
 @import './components/page-footer';
 @import './components/portfolio-filter';
