--- a/sass/components/_services.scss
+++ b/sass/components/_services.scss
@@ -1,27 +1,36 @@
-.services__list {
-  display: flex;
-  justify-content: space-between;
+.services {
+  display: none;
 }
-.services__item {
-  position: relative;
-}
-.services-item__title {
-  position: absolute;
-  left: 0;
-  bottom: 0;
+@media screen and (min-width: 1200px) {
+  .services {
+    display: block;
+    padding-bottom: 94px;
+  }
+  .services__list {
+    display: flex;
+    justify-content: space-between;
+  }
+  .services__item {
+    position: relative;
+  }
+  .services-item__title {
+    position: absolute;
+    left: 0;
+    bottom: 0;
 
-  padding-top: 27px;
-  padding-bottom: 27px;
-  width: 100%;
-  height: 70px;
-  background-color: rgba(47, 48, 58, 0.8);
-  color: var(--reserve-text-color);
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  text-align: center;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
+    padding-top: 27px;
+    padding-bottom: 27px;
+    width: 100%;
+    height: 70px;
+    background-color: rgba(47, 48, 58, 0.8);
+    color: var(--reserve-text-color);
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
 
-  transform: translateY(0);
+    transform: translateY(0);
+  }
 }
