--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,21 +1,18 @@
 .team {
   background: #f5f4fa;
 }
-.team__list {
-  display: flex;
-  justify-content: space-between;
-}
 .team__item {
   padding-bottom: 30px;
   background-color: var(--reserve-text-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+  &:not(:last-child) {
+    margin-bottom: 30px;
+  }
 }
 .team-item__info {
   margin-top: 30px;
-  padding-right: 32px;
-  padding-left: 32px;
 }
 .team-item__name {
   font-weight: 500;
@@ -34,8 +31,13 @@
 }
 .team-item__social-list {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   margin-top: 16px;
+}
+.social-list__item {
+  &:not(:last-child) {
+    margin-right: 10px;
+  }
 }
 .social-list__link {
   @include flex(center, center);
@@ -54,3 +56,7 @@
 .social-list__icon {
   fill: currentColor;
 }
+// .team__list {
+//   display: flex;
+//   justify-content: space-between;
+// }
