--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,17 +1,7 @@
-.clients__list {
-  display: flex;
-  align-items: flex-start;
-  justify-content: space-between;
-}
-.clients__item {
-  &:not(:last-child) {
-    margin-right: 30px;
-  }
-}
 .clients__link {
   @include flex(center, center);
   color: #afb1b8;
-  width: 170px;
+  width: 210px;
   height: 90px;
   border: 1px solid;
   border-radius: 4px;
@@ -26,4 +16,47 @@
 }
 .clients__logo {
   fill: currentColor;
+}
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .clients__list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: calc(-1 * var(--card-set-gap));
+    margin-left: calc(-1 * var(--card-set-gap));
+  }
+  .clients__item {
+    margin-top: var(--card-set-gap);
+    margin-left: var(--card-set-gap);
+    flex-basis: calc(100% / 2 - var(--card-set-gap));
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .clients__link {
+    width: 226px;
+  }
+  .clients__list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: calc(-1 * var(--card-set-gap));
+    margin-left: calc(-1 * var(--card-set-gap));
+  }
+  .clients__item {
+    margin-top: var(--card-set-gap);
+    margin-left: var(--card-set-gap);
+    flex-basis: calc(100% / 3 - var(--card-set-gap));
+  }
+}
+@media screen and (min-width: 768px) {
+  .clients__list {
+    display: flex;
+    align-items: flex-start;
+  }
+  .clients__item {
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
+  }
+  .clients__link {
+    width: 170px;
+  }
 }
