--- a/css/main.css
+++ b/css/main.css
@@ -849,7 +849,7 @@ textarea {
   fill: currentColor;
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (min-width: 480px) and (max-width: 767px) {
   .clients__list {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -888,7 +888,7 @@ textarea {
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .clients__list {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -902,6 +902,27 @@ textarea {
   }
   .clients__link {
     width: 170px;
+  }
+}
+
+@media screen and (max-width: 479px) {
+  .clients__link {
+    width: 157px;
+  }
+  .clients__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin-top: calc(-1 * var(--card-set-gap));
+    margin-left: calc(-1 * var(--card-set-gap));
+  }
+  .clients__item {
+    margin-top: var(--card-set-gap);
+    margin-left: var(--card-set-gap);
+    -ms-flex-preferred-size: calc(100% / 2 - var(--card-set-gap));
+        flex-basis: calc(100% / 2 - var(--card-set-gap));
   }
 }
 /*# sourceMappingURL=main.css.map */
