--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -17,7 +17,7 @@
 .clients__logo {
   fill: currentColor;
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (min-width: 480px) and (max-width: 767px) {
   .clients__list {
     display: flex;
     flex-wrap: wrap;
@@ -46,7 +46,7 @@
     flex-basis: calc(100% / 3 - var(--card-set-gap));
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .clients__list {
     display: flex;
     align-items: flex-start;
@@ -58,5 +58,22 @@
   }
   .clients__link {
     width: 170px;
+  }
+}
+// =========== FOR IPHONE
+@media screen and (max-width: 479px) {
+  .clients__link {
+    width: 157px;
+  }
+  .clients__list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: calc(-1 * var(--card-set-gap));
+    margin-left: calc(-1 * var(--card-set-gap));
+  }
+  .clients__item {
+    margin-top: var(--card-set-gap);
+    margin-left: var(--card-set-gap);
+    flex-basis: calc(100% / 2 - var(--card-set-gap));
   }
 }
