--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,7 +1,6 @@
 .clients__link {
   @include flex(center, center);
   color: #afb1b8;
-  width: 210px;
   height: 90px;
   border: 1px solid;
   border-radius: 4px;
@@ -18,6 +17,9 @@
   fill: currentColor;
 }
 @media screen and (min-width: 480px) and (max-width: 767px) {
+  .clients__link {
+    width: 210px;
+  }
   .clients__list {
     display: flex;
     flex-wrap: wrap;
