portfolio-filter done

--- a/sass/components/_portfolio-filter.scss
+++ b/sass/components/_portfolio-filter.scss
@@ -1,7 +1,5 @@
 .portfolio__filter {
   display: flex;
-  justify-content: center;
-  margin-bottom: 50px;
 }
 .portfolio-filter__item {
   &:not(:last-child) {
@@ -29,5 +27,28 @@
     color: var(--reserve-text-color);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
       0px 2px 2px rgba(0, 0, 0, 0.12);
+  }
+}
+@media screen and (min-width: 480px) {
+  .portfolio__filter {
+    flex-wrap: wrap;
+    align-content: space-between;
+    height: 91px;
+    margin-bottom: 40px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .portfolio__filter {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .portfolio__filter {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 50px;
   }
 }
