--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -2,18 +2,13 @@
   padding-top: 60px;
   padding-bottom: 60px;
   background: #2f303a;
-  .container {
-    @include flex(start, baseline);
-  }
-}
-.footer__wrap {
-  width: 231px;
+  text-align: center;
 }
 .footer-address__list {
   margin-top: 20px;
 }
 .footer-address__item:not(:last-child) {
-  margin-bottom: 9px;
+  margin-bottom: 8px;
 }
 .footer-address__link {
   font-size: 14px;
@@ -23,10 +18,6 @@
   &.map {
     color: var(--reserve-text-color);
   }
-}
-
-.footer__social {
-  margin-left: 70px;
 }
 .footer-social__title,
 .subscription__title {
@@ -41,8 +32,11 @@
 }
 .footer-social__list {
   display: flex;
-  justify-content: space-between;
-  width: 206px;
+  justify-content: center;
+  // width: 206px;
+}
+.footer-social__item:not(:last-child) {
+  margin-right: 10px;
 }
 .footer-social__link {
   @include flex(center, center);
@@ -61,23 +55,14 @@
 .footer-social__logo {
   fill: currentColor;
 }
-
-.subscription {
-  display: block;
-  margin-left: 93px;
-  width: 570px;
-}
 .subscription-btn__icon {
   margin-left: 10px;
   fill: currentColor;
 }
-.subscription__wrap {
-  display: flex;
-}
 .subscription__input {
-  margin-right: 12px;
+  margin-bottom: 20px;
   padding: 15px 16px;
-  min-width: 358px;
+  min-width: 450px;
   min-height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -96,3 +81,37 @@
     color: rgba(255, 255, 255, 0.6);
   }
 }
+.footer__social,
+.subscription {
+  margin-top: 60px;
+}
+//   .container {
+//     @include flex(start, baseline);
+//   }
+// }
+// .footer__wrap {
+//   width: 231px;
+// }
+
+// .footer-address__item:not(:last-child) {
+//   margin-bottom: 9px;
+// }
+
+// .footer__social {
+//   margin-left: 70px;
+// }
+
+// .subscription {
+//   display: block;
+//   margin-left: 93px;
+//   width: 570px;
+// }
+
+// .subscription__wrap {
+//   display: flex;
+// }
+
+// .subscription__input {
+//   margin-right: 12px;
+//   min-width: 358px;
+// }
