--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,7 @@
 @import './utils/mixins';
 @import './components/logo';
 @import './components/page-header';
+@import './components/page-footer';
 @import './base/button';
 @import './components/modal';
 @import './components/modal-form';
