--- a/sass/components/_portfolio-filter.scss
+++ b/sass/components/_portfolio-filter.scss
@@ -29,7 +29,7 @@
       0px 2px 2px rgba(0, 0, 0, 0.12);
   }
 }
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 767px) {
   .portfolio__filter {
     flex-wrap: wrap;
     align-content: space-between;
