--- a/sass/components/_portfolio-projects.scss
+++ b/sass/components/_portfolio-projects.scss
@@ -1,8 +1,3 @@
-@media screen and (max-width: 767px) {
-  .portfolio-projects__item:not(:last-child) {
-    margin-bottom: 30px;
-  }
-}
 .portfolio-projects__link {
   display: block;
   outline: none;
@@ -60,6 +55,14 @@
     transform: translateY(0);
   }
 }
+.portfolio-projects__image {
+  width: 100%;
+}
+@media screen and (max-width: 767px) {
+  .portfolio-projects__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
 @media screen and (min-width: 768px) {
   .portfolio__projects {
     display: flex;
@@ -84,9 +87,5 @@
     flex-basis: calc(100% / 3 - var(--card-set-gap));
     margin-left: var(--card-set-gap);
     margin-top: var(--card-set-gap);
-  }
-  .portfolio-projects__image {
-    width: 370px;
-    height: 294px;
   }
 }
