--- a/css/main.css
+++ b/css/main.css
@@ -559,6 +559,16 @@ textarea {
   fill: var(--accent-text-color);
 }
 
+@media screen and (min-width: 480px) {
+  .modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+  }
+}
+
 @media screen and (max-width: 1199px) {
   .modal {
     width: 450px;
