--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -56,6 +56,15 @@
     fill: var(--accent-text-color);
   }
 }
+@media screen and (min-width: 480px) {
+  .modal {
+    // position: relative;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+}
 @media screen and (max-width: 1199px) {
   .modal {
     width: 450px;
