--- a/css/main.css
+++ b/css/main.css
@@ -518,17 +518,25 @@ textarea {
   background-color: var(--reserve-text-color);
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  -webkit-transform: scale(1);
-          transform: scale(1);
-  -webkit-transition: -webkit-transform 700ms cubic-bezier(0.42, 0, 0.58, 1);
-  transition: -webkit-transform 700ms cubic-bezier(0.42, 0, 0.58, 1);
-  transition: transform 700ms cubic-bezier(0.42, 0, 0.58, 1);
-  transition: transform 700ms cubic-bezier(0.42, 0, 0.58, 1), -webkit-transform 700ms cubic-bezier(0.42, 0, 0.58, 1);
+}
+
+@media screen and (min-width: 480px) {
+  .modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%) scale(1);
+            transform: translate(-50%, -50%) scale(1);
+    -webkit-transition: -webkit-transform 700ms cubic-bezier(0.42, 0, 0.58, 1);
+    transition: -webkit-transform 700ms cubic-bezier(0.42, 0, 0.58, 1);
+    transition: transform 700ms cubic-bezier(0.42, 0, 0.58, 1);
+    transition: transform 700ms cubic-bezier(0.42, 0, 0.58, 1), -webkit-transform 700ms cubic-bezier(0.42, 0, 0.58, 1);
+  }
 }
 
 .backdrop.is-hidden .modal {
-  -webkit-transform: scale(0);
-          transform: scale(0);
+  -webkit-transform: translate(-50%, -50%) scale(0);
+          transform: translate(-50%, -50%) scale(0);
 }
 
 .modal__btn-close {
@@ -557,16 +565,6 @@ textarea {
 
 .modal__btn-close:hover, .modal__btn-close:focus {
   fill: var(--accent-text-color);
-}
-
-@media screen and (min-width: 480px) {
-  .modal {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
-  }
 }
 
 @media screen and (max-width: 1199px) {
