--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -28,21 +28,11 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
 
-  // transform: scale(1);
-  // transition: transform 700ms cubic-bezier(0.42, 0, 0.58, 1);
-}
-@media screen and (min-width: 480px) {
-  .modal {
-    // position: relative;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(1);
-    transition: transform 700ms cubic-bezier(0.42, 0, 0.58, 1);
-  }
+  transform: scale(1);
+  transition: transform 700ms cubic-bezier(0.42, 0, 0.58, 1);
 }
 .backdrop.is-hidden .modal {
-  transform: translate(-50%, -50%) scale(0);
+  transform: scale(0);
 }
 .modal__btn-close {
   position: absolute;
