--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -46,9 +46,8 @@
   height: 30px;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
-  background: #ffffff;
   fill: 212121;
-
+  outline: none;
   transition: fill var(--timing-fn);
 
   &:hover,
